// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line chart table suite 1 Indicator, 1 Area snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c18 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c18:last-child {
  padding-right: 0;
}

.c21 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c21:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c4 {
  text-align: left;
  vertical-align: top;
}

.c5 {
  border: none;
}

.c6 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c7 {
  text-align: left;
  vertical-align: top;
}

.c8 {
  width: 10%;
  padding: 1em 0;
  text-align: center;
}

.c9 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c10 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c14 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c12 {
  text-align: left;
  vertical-align: top;
}

.c16 {
  width: 27%;
}

.c13 {
  width: 22%;
  padding: 0.5em;
  text-align: center;
}

.c15 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c19 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  padding-right: 0;
}

.c20 {
  text-align: left;
  width: 10%;
}

.c22 {
  text-align: right;
  padding-right: 10px;
}

.c23 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c17 {
  display: block;
}

@media print {
  .c18 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c3 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c6 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c6 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c11 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c19 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c19 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c2 c3 c4 c5"
            colspan="5"
          >
            Greater Manchester ICB - 00T recent trend:
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
          />
          <th
            class="c2 c6 c7 c8"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c2 c6 c9 c10"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
            colspan="4"
          />
          <th
            class="c2 c11 c12 c13"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c2 c11 c14 c15"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c2 c11 c12"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c2 c11 c12 c16"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="6 c17"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Lower-4"
          >
            Lower
            <span
              class="6 c17"
            />
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Upper-5"
          >
            Upper
            <span
              class="6 c17"
            />
          </th>
          <th
            class="c2 c11 c14 c15"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="6 c17"
            >
              (%)
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="0 c18 c19 c20"
          >
            2004
          </td>
          <td
            class="0 c21 c19 c20"
          />
          <td
            class="0 c18 c19 c22"
          >
            267
          </td>
          <td
            class="0 c18 c19 c22"
          >
            703.420759
          </td>
          <td
            class="0 c18 c19 c22"
          >
            441.69151
          </td>
          <td
            class="0 c18 c19 c22"
          >
            578.32766
          </td>
          <td
            class="0 c21 c19 c22 c23"
            data-testid="grey-table-cell"
          >
            904.874
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="0 c18 c19 c20"
          >
            2008
          </td>
          <td
            class="0 c21 c19 c20"
          />
          <td
            class="0 c18 c19 c22"
          >
            222
          </td>
          <td
            class="0 c18 c19 c22"
          >
            890.305692
          </td>
          <td
            class="0 c18 c19 c22"
          >
            441.69151
          </td>
          <td
            class="0 c18 c19 c22"
          >
            578.32766
          </td>
          <td
            class="0 c21 c19 c22 c23"
            data-testid="grey-table-cell"
          >
            965.9843
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Line chart table suite 1 Indicator, 2 Areas snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c19 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c19:last-child {
  padding-right: 0;
}

.c22 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c22:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c4 {
  text-align: left;
  vertical-align: top;
}

.c5 {
  border: none;
}

.c6 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c7 {
  text-align: left;
  vertical-align: top;
}

.c8 {
  width: 10%;
  padding: 1em 0;
  text-align: center;
}

.c9 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c10 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c14 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c12 {
  text-align: left;
  vertical-align: top;
}

.c16 {
  width: 27%;
}

.c17 {
  border-left: solid black 1px;
  width: 18%;
  padding-left: 0.5em;
}

.c13 {
  width: 22%;
  padding: 0.5em;
  text-align: center;
}

.c15 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c20 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  padding-right: 0;
}

.c21 {
  text-align: left;
  width: 10%;
}

.c23 {
  border-left: solid black 1px;
}

.c24 {
  text-align: right;
  padding-right: 10px;
}

.c25 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c18 {
  display: block;
}

@media print {
  .c19 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c3 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c6 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c6 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c11 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c20 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c20 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c2 c3 c4 c5"
          />
          <th
            class="c2 c3 c4 c5"
            colspan="5"
          >
            Greater Manchester ICB - 00T recent trend:
          </th>
          <th
            class="c2 c3 c4 c5"
            colspan="5"
          >
            South FooBar recent trend:
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
          />
          <th
            class="c2 c6 c7 c8"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c2 c6 c7 c8"
            colspan="5"
          >
            South FooBar
          </th>
          <th
            class="c2 c6 c9 c10"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
            colspan="4"
          />
          <th
            class="c2 c11 c12 c13"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c2"
            colspan="3"
          />
          <th
            class="c2 c11 c12 c13"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c2 c11 c14 c15"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c2 c11 c12"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c2 c11 c12 c16 c17"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="6 c18"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Lower-4"
          >
            Lower
            <span
              class="6 c18"
            />
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Upper-5"
          >
            Upper
            <span
              class="6 c18"
            />
          </th>
          <th
            class="c2 c11 c12 c16 c17"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="6 c18"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Lower-4"
          >
            Lower
            <span
              class="6 c18"
            />
          </th>
          <th
            class="c2 c11 c14"
            data-testid="header-Upper-5"
          >
            Upper
            <span
              class="6 c18"
            />
          </th>
          <th
            class="c2 c11 c14 c15"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="6 c18"
            >
              (%)
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="0 c19 c20 c21"
          >
            2004
          </td>
          <td
            class="0 c22 c20 c21 c23"
          />
          <td
            class="0 c19 c20 c24"
          >
            267
          </td>
          <td
            class="0 c19 c20 c24"
          >
            703.420759
          </td>
          <td
            class="0 c19 c20 c24"
          >
            441.69151
          </td>
          <td
            class="0 c19 c20 c24"
          >
            578.32766
          </td>
          <td
            class="0 c22 c20 c21 c23"
          />
          <td
            class="0 c19 c20 c24"
          >
            222
          </td>
          <td
            class="0 c19 c20 c24"
          >
            135.149304
          </td>
          <td
            class="0 c19 c20 c24"
          >
            441.69151
          </td>
          <td
            class="0 c19 c20 c24"
          >
            578.32766
          </td>
          <td
            class="0 c22 c20 c24 c25"
            data-testid="grey-table-cell"
          >
            904.874
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="0 c19 c20 c21"
          >
            2008
          </td>
          <td
            class="0 c22 c20 c21 c23"
          />
          <td
            class="0 c19 c20 c24"
          >
            222
          </td>
          <td
            class="0 c19 c20 c24"
          >
            890.305692
          </td>
          <td
            class="0 c19 c20 c24"
          >
            441.69151
          </td>
          <td
            class="0 c19 c20 c24"
          >
            578.32766
          </td>
          <td
            class="0 c22 c20 c21 c23"
          />
          <td
            class="0 c19 c20 c24"
          >
            131
          </td>
          <td
            class="0 c19 c20 c24"
          >
            890.328253
          </td>
          <td
            class="0 c19 c20 c24"
          >
            441.69151
          </td>
          <td
            class="0 c19 c20 c24"
          >
            578.32766
          </td>
          <td
            class="0 c22 c20 c24 c25"
            data-testid="grey-table-cell"
          >
            965.9843
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
